--- a/src/index.template.html
+++ b/src/index.template.html
@@ -12,6 +12,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
+
+    <script src="https://cdn.usefathom.com/script.js" data-site="PDKJSBKL" defer></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
