--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/ico" href="branding/favicon.ico">
 
     <script src="https://cdn.usefathom.com/script.js" data-site="PDKJSBKL" defer></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
